moved Waves below z-index to fix first button;bruteforce all :hover

--- a/src/Waves/Waves.css
+++ b/src/Waves/Waves.css
@@ -2,4 +2,6 @@
     background-color: #000;
     margin-top: -25%;
     margin-bottom: -10%;
+    z-index: -1;
+    position: relative;
 }
